--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,19 @@
       content="Web site created using create-react-app"
     />
     <title>NINE GAP  </title>
+ <style>
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html{
+scroll-behavior: smooth;
+
+}
+
+ </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
